--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "firebase": "^11.8.1",
     "install": "^0.13.0",
     "next": "15.3.2",
     "postcss": "^8.5.3",
